--- a/luci-app-bandix/po/zh_Hans/bandix.po
+++ b/luci-app-bandix/po/zh_Hans/bandix.po
@@ -671,8 +671,8 @@ msgstr "离线超时时间"
 msgid "Set the timeout for device offline detection (seconds). Devices inactive for longer than this time will be marked as offline"
 msgstr "设置设备离线判断的超时时间（秒）。超过此时间未活动的设备将被标记为离线"
 
-msgid "Traffic History Period"
-msgstr "历史流量周期"
+msgid "Realtime Traffic Period"
+msgstr "实时流量周期"
 
 msgid "10 minutes interval uses about 60 KB per device"
 msgstr "10分钟历史周期，每个设备占用 60KB"
@@ -745,3 +745,285 @@ msgstr "响应"
 
 msgid "Average Response Time"
 msgstr "平均响应时间"
+
+msgid "Show More"
+msgstr "显示更多"
+
+msgid "Show Less"
+msgstr "显示更少"
+
+msgid "Add Schedule Rule"
+msgstr "添加定时限速规则"
+
+msgid "Add Rule"
+msgstr "添加规则"
+
+msgid "Set rate limit rules for different time periods"
+msgstr "为不同时间段设置限速规则"
+
+msgid "Time Slot"
+msgstr "时间段"
+
+msgid "Days of Week"
+msgstr "星期"
+
+msgid "Mon"
+msgstr "周一"
+
+msgid "Tue"
+msgstr "周二"
+
+msgid "Wed"
+msgstr "周三"
+
+msgid "Thu"
+msgstr "周四"
+
+msgid "Fri"
+msgstr "周五"
+
+msgid "Sat"
+msgstr "周六"
+
+msgid "Sun"
+msgstr "周日"
+
+msgid "Adding..."
+msgstr "添加中..."
+
+msgid "Failed to add schedule rule: "
+msgstr "添加定时限速规则失败："
+
+msgid "Please set time slot"
+msgstr "请设置时间段"
+
+msgid "Please select at least one day"
+msgstr "请至少选择一天"
+
+msgid "No scheduled rules yet, click \"Add Rule\" to start setting"
+msgstr "还没有定时限速规则，点击"添加规则"开始设置"
+
+msgid "Loading..."
+msgstr "加载中..."
+
+msgid "No schedule rules"
+msgstr "没有定时限速规则"
+
+msgid "Failed to load schedule rules"
+msgstr "加载定时限速规则失败"
+
+msgid "Delete Schedule Rule"
+msgstr "删除定时限速规则"
+
+msgid "Are you sure you want to delete this schedule rule?"
+msgstr "确定要删除这个定时限速规则吗？"
+
+msgid "Failed to delete schedule rule"
+msgstr "删除定时限速规则失败"
+
+msgid "Confirm"
+msgstr "确认"
+
+msgid "Close"
+msgstr "关闭"
+
+msgid "rule"
+msgstr "规则"
+
+msgid "rules"
+msgstr "规则"
+
+msgid "more"
+msgstr "更多"
+
+msgid "No active rule"
+msgstr "无生效规则"
+
+msgid "Schedule Rules"
+msgstr "定时限速规则"
+
+msgid "Upload Statistics"
+msgstr "上传统计"
+
+msgid "Download Statistics"
+msgstr "下载统计"
+
+msgid "Cumulative Traffic"
+msgstr "累计流量"
+
+msgid "Daily"
+msgstr "每日"
+
+msgid "Weekly"
+msgstr "每周"
+
+msgid "Monthly"
+msgstr "每月"
+
+msgid "Statistics"
+msgstr "统计"
+
+msgid "Average"
+msgstr "平均值"
+
+msgid "Maximum"
+msgstr "最大值"
+
+msgid "Minimum"
+msgstr "最小值"
+
+msgid "WAN Upload"
+msgstr "WAN 上传"
+
+msgid "WAN Download"
+msgstr "WAN 下载"
+
+msgid "WAN Uploaded"
+msgstr "WAN 上传量"
+
+msgid "WAN Downloaded"
+msgstr "WAN 下载量"
+
+msgid "Clear Traffic Data"
+msgstr "删除流量数据"
+
+msgid "Are you sure you want to clear all traffic data? This action cannot be undone."
+msgstr "确定要清除所有流量数据吗？此操作无法撤销。"
+
+msgid "Failed to clear traffic data: "
+msgstr "清除流量数据失败："
+
+msgid "Restart Service"
+msgstr "重启服务"
+
+msgid "Restart Bandix Service"
+msgstr "重启 Bandix 服务"
+
+msgid "Are you sure you want to restart the Bandix service?"
+msgstr "确定要重启 Bandix 服务吗？"
+
+msgid "Failed to restart service: "
+msgstr "重启服务失败："
+
+msgid "Realtime"
+msgstr "实时"
+
+msgid "Last 24 Hours"
+msgstr "最近24小时"
+
+msgid "Last 7 Days"
+msgstr "最近7天"
+
+msgid "Last 30 Days"
+msgstr "最近30天"
+
+msgid "Last 10 Minutes"
+msgstr "最近10分钟"
+
+msgid "Last 15 Minutes"
+msgstr "最近15分钟"
+
+msgid "Last 30 Minutes"
+msgstr "最近30分钟"
+
+msgid "Last 1 Hour"
+msgstr "最近1小时"
+
+msgid "Starting installation..."
+msgstr "开始安装..."
+
+msgid "Page will refresh in 3 seconds."
+msgstr "页面将在3秒后刷新。"
+
+msgid "Installation failed"
+msgstr "安装失败"
+
+msgid "Installation failed at step: "
+msgstr "安装在步骤失败："
+
+msgid "Details: "
+msgstr "详细信息："
+
+msgid "Installation failed: "
+msgstr "安装失败："
+
+msgid "Unknown error"
+msgstr "未知错误"
+
+msgid "Service restarted successfully."
+msgstr "服务重启成功。"
+
+msgid "Service restart may have failed. Please check manually."
+msgstr "服务重启可能失败，请手动检查。"
+
+msgid "Please restart the service."
+msgstr "请重启服务。"
+
+msgid "LuCI App updated successfully!"
+msgstr "LuCI 应用更新成功！"
+
+msgid "Bandix updated successfully!"
+msgstr "Bandix 更新成功！"
+
+msgid "LuCI App has update: "
+msgstr "LuCI 应用有更新："
+
+msgid "Bandix has update: "
+msgstr "Bandix 有更新："
+
+msgid "LuCI App is up to date: "
+msgstr "LuCI 应用已是最新版本："
+
+msgid "Bandix is up to date: "
+msgstr "Bandix 已是最新版本："
+
+msgid "Updates Available"
+msgstr "有可用更新"
+
+msgid "No Updates Available"
+msgstr "无可用更新"
+
+msgid "Detected Architecture"
+msgstr "检测到的架构"
+
+msgid "Package Manager"
+msgstr "包管理器"
+
+msgid "LuCI Assets"
+msgstr "LuCI 资源"
+
+msgid "Bandix Assets"
+msgstr "Bandix 资源"
+
+msgid "Failed to check for updates"
+msgstr "检查更新失败"
+
+msgid "Failed to check for updates: "
+msgstr "检查更新失败："
+
+msgid "Checking..."
+msgstr "检查中..."
+
+msgid "Installing..."
+msgstr "安装中..."
+
+msgid "Download and Install"
+msgstr "下载并安装"
+
+msgid "Manual Download"
+msgstr "手动下载"
+
+msgid "Close"
+msgstr "关闭"
+
+msgid "Starting installation... The page will refresh automatically in 5 seconds."
+msgstr "开始安装... 页面将在5秒后自动刷新。"
+
+msgid "Please clear your browser cache manually after updating."
+msgstr "更新后请手动清空浏览器缓存。"
+
+msgid "Update available"
+msgstr "有更新"
+
+msgid "Update available, click to go to settings"
+msgstr "有更新，点击前往设置"
