--- a/luci-app-bandix/po/es/bandix.po
+++ b/luci-app-bandix/po/es/bandix.po
@@ -671,8 +671,8 @@ msgstr "Tiempo de espera sin conexión"
 msgid "Set the timeout for device offline detection (seconds). Devices inactive for longer than this time will be marked as offline"
 msgstr "Establecer el tiempo de espera para la detección de dispositivos sin conexión (segundos). Los dispositivos inactivos por más tiempo serán marcados como sin conexión"
 
-msgid "Traffic History Period"
-msgstr "Período del historial de tráfico"
+msgid "Realtime Traffic Period"
+msgstr "Período de tráfico en tiempo real"
 
 msgid "10 minutes interval uses about 60 KB per device"
 msgstr "Intervalo de 10 minutos usa aproximadamente 60 KB por dispositivo"
@@ -745,3 +745,279 @@ msgstr "Respuestas"
 
 msgid "Average Response Time"
 msgstr "Tiempo de Respuesta Promedio"
+
+msgid "Show More"
+msgstr "Mostrar más"
+
+msgid "Show Less"
+msgstr "Mostrar menos"
+
+msgid "Add Schedule Rule"
+msgstr "Agregar regla de limitación programada"
+
+msgid "Add Rule"
+msgstr "Agregar regla"
+
+msgid "Set rate limit rules for different time periods"
+msgstr "Establecer reglas de limitación para diferentes períodos de tiempo"
+
+msgid "Time Slot"
+msgstr "Franja horaria"
+
+msgid "Days of Week"
+msgstr "Días de la semana"
+
+msgid "Mon"
+msgstr "Lun"
+
+msgid "Tue"
+msgstr "Mar"
+
+msgid "Wed"
+msgstr "Mié"
+
+msgid "Thu"
+msgstr "Jue"
+
+msgid "Fri"
+msgstr "Vie"
+
+msgid "Sat"
+msgstr "Sáb"
+
+msgid "Sun"
+msgstr "Dom"
+
+msgid "Adding..."
+msgstr "Agregando..."
+
+msgid "Failed to add schedule rule: "
+msgstr "Error al agregar regla programada: "
+
+msgid "Please set time slot"
+msgstr "Por favor establezca la franja horaria"
+
+msgid "Please select at least one day"
+msgstr "Por favor seleccione al menos un día"
+
+msgid "No scheduled rules yet, click \"Add Rule\" to start setting"
+msgstr "Aún no hay reglas programadas, haga clic en \"Agregar regla\" para comenzar"
+
+msgid "Loading..."
+msgstr "Cargando..."
+
+msgid "No schedule rules"
+msgstr "No hay reglas programadas"
+
+msgid "Failed to load schedule rules"
+msgstr "Error al cargar reglas programadas"
+
+msgid "Delete Schedule Rule"
+msgstr "Eliminar regla programada"
+
+msgid "Are you sure you want to delete this schedule rule?"
+msgstr "¿Está seguro de que desea eliminar esta regla programada?"
+
+msgid "Failed to delete schedule rule"
+msgstr "Error al eliminar regla programada"
+
+msgid "Confirm"
+msgstr "Confirmar"
+
+msgid "Close"
+msgstr "Cerrar"
+
+msgid "rule"
+msgstr "regla"
+
+msgid "rules"
+msgstr "reglas"
+
+msgid "more"
+msgstr "más"
+
+msgid "No active rule"
+msgstr "Sin regla activa"
+
+msgid "Schedule Rules"
+msgstr "Reglas de limitación programada"
+
+msgid "Upload Statistics"
+msgstr "Estadísticas de subida"
+
+msgid "Download Statistics"
+msgstr "Estadísticas de descarga"
+
+msgid "Cumulative Traffic"
+msgstr "Tráfico acumulado"
+
+msgid "Daily"
+msgstr "Diario"
+
+msgid "Weekly"
+msgstr "Semanal"
+
+msgid "Monthly"
+msgstr "Mensual"
+
+msgid "Statistics"
+msgstr "Estadísticas"
+
+msgid "Average"
+msgstr "Promedio"
+
+msgid "Maximum"
+msgstr "Máximo"
+
+msgid "Minimum"
+msgstr "Mínimo"
+
+msgid "WAN Upload"
+msgstr "Subida WAN"
+
+msgid "WAN Download"
+msgstr "Descarga WAN"
+
+msgid "WAN Uploaded"
+msgstr "Subido WAN"
+
+msgid "WAN Downloaded"
+msgstr "Descargado WAN"
+
+msgid "Clear Traffic Data"
+msgstr "Borrar datos de tráfico"
+
+msgid "Are you sure you want to clear all traffic data? This action cannot be undone."
+msgstr "¿Está seguro de que desea borrar todos los datos de tráfico? Esta acción no se puede deshacer."
+
+msgid "Failed to clear traffic data: "
+msgstr "Error al borrar los datos de tráfico: "
+
+msgid "Restart Service"
+msgstr "Reiniciar servicio"
+
+msgid "Restart Bandix Service"
+msgstr "Reiniciar servicio Bandix"
+
+msgid "Are you sure you want to restart the Bandix service?"
+msgstr "¿Está seguro de que desea reiniciar el servicio Bandix?"
+
+msgid "Failed to restart service: "
+msgstr "Error al reiniciar el servicio: "
+
+msgid "Realtime"
+msgstr "Tiempo real"
+
+msgid "Last 24 Hours"
+msgstr "Últimas 24 horas"
+
+msgid "Last 7 Days"
+msgstr "Últimos 7 días"
+
+msgid "Last 30 Days"
+msgstr "Últimos 30 días"
+
+msgid "Last 10 Minutes"
+msgstr "Últimos 10 minutos"
+
+msgid "Last 15 Minutes"
+msgstr "Últimos 15 minutos"
+
+msgid "Last 30 Minutes"
+msgstr "Últimos 30 minutos"
+
+msgid "Last 1 Hour"
+msgstr "Última 1 hora"
+
+msgid "Starting installation..."
+msgstr "Iniciando instalación..."
+
+msgid "Page will refresh in 3 seconds."
+msgstr "La página se actualizará en 3 segundos."
+
+msgid "Installation failed"
+msgstr "Instalación fallida"
+
+msgid "Installation failed at step: "
+msgstr "Instalación fallida en el paso: "
+
+msgid "Details: "
+msgstr "Detalles: "
+
+msgid "Installation failed: "
+msgstr "Instalación fallida: "
+
+msgid "Unknown error"
+msgstr "Error desconocido"
+
+msgid "Service restarted successfully."
+msgstr "Servicio reiniciado exitosamente."
+
+msgid "Service restart may have failed. Please check manually."
+msgstr "El reinicio del servicio puede haber fallado. Por favor, verifique manualmente."
+
+msgid "Please restart the service."
+msgstr "Por favor, reinicie el servicio."
+
+msgid "LuCI App updated successfully!"
+msgstr "¡Aplicación LuCI actualizada exitosamente!"
+
+msgid "Bandix updated successfully!"
+msgstr "¡Bandix actualizado exitosamente!"
+
+msgid "LuCI App has update: "
+msgstr "La aplicación LuCI tiene actualización: "
+
+msgid "Bandix has update: "
+msgstr "Bandix tiene actualización: "
+
+msgid "LuCI App is up to date: "
+msgstr "La aplicación LuCI está actualizada: "
+
+msgid "Bandix is up to date: "
+msgstr "Bandix está actualizado: "
+
+msgid "Updates Available"
+msgstr "Actualizaciones Disponibles"
+
+msgid "No Updates Available"
+msgstr "No Hay Actualizaciones Disponibles"
+
+msgid "Detected Architecture"
+msgstr "Arquitectura Detectada"
+
+msgid "Package Manager"
+msgstr "Gestor de Paquetes"
+
+msgid "LuCI Assets"
+msgstr "Recursos de LuCI"
+
+msgid "Bandix Assets"
+msgstr "Recursos de Bandix"
+
+msgid "Failed to check for updates"
+msgstr "Error al verificar actualizaciones"
+
+msgid "Failed to check for updates: "
+msgstr "Error al verificar actualizaciones: "
+
+msgid "Checking..."
+msgstr "Verificando..."
+
+msgid "Installing..."
+msgstr "Instalando..."
+
+msgid "Download and Install"
+msgstr "Descargar e Instalar"
+
+msgid "Manual Download"
+msgstr "Descarga Manual"
+
+msgid "Close"
+msgstr "Cerrar"
+
+msgid "Starting installation... The page will refresh automatically in 5 seconds."
+msgstr "Iniciando instalación... La página se actualizará automáticamente en 5 segundos."
+
+msgid "Please clear your browser cache manually after updating."
+msgstr "Por favor, borre manualmente la caché del navegador después de actualizar."
