--- a/luci-app-bandix/po/id/bandix.po
+++ b/luci-app-bandix/po/id/bandix.po
@@ -671,8 +671,8 @@ msgstr "Timeout offline"
 msgid "Set the timeout for device offline detection (seconds). Devices inactive for longer than this time will be marked as offline"
 msgstr "Atur timeout untuk deteksi perangkat offline (detik). Perangkat yang tidak aktif lebih lama dari waktu ini akan ditandai sebagai offline"
 
-msgid "Traffic History Period"
-msgstr "Periode riwayat lalu lintas"
+msgid "Realtime Traffic Period"
+msgstr "Periode lalu lintas waktu nyata"
 
 msgid "10 minutes interval uses about 60 KB per device"
 msgstr "Interval 10 menit menggunakan sekitar 60 KB per perangkat"
@@ -745,3 +745,279 @@ msgstr "Respons"
 
 msgid "Average Response Time"
 msgstr "Waktu Respons Rata-rata"
+
+msgid "Show More"
+msgstr "Tampilkan lebih banyak"
+
+msgid "Show Less"
+msgstr "Tampilkan lebih sedikit"
+
+msgid "Add Schedule Rule"
+msgstr "Tambah aturan pembatasan terjadwal"
+
+msgid "Add Rule"
+msgstr "Tambah aturan"
+
+msgid "Set rate limit rules for different time periods"
+msgstr "Tetapkan aturan pembatasan untuk periode waktu yang berbeda"
+
+msgid "Time Slot"
+msgstr "Slot waktu"
+
+msgid "Days of Week"
+msgstr "Hari dalam seminggu"
+
+msgid "Mon"
+msgstr "Sen"
+
+msgid "Tue"
+msgstr "Sel"
+
+msgid "Wed"
+msgstr "Rab"
+
+msgid "Thu"
+msgstr "Kam"
+
+msgid "Fri"
+msgstr "Jum"
+
+msgid "Sat"
+msgstr "Sab"
+
+msgid "Sun"
+msgstr "Min"
+
+msgid "Adding..."
+msgstr "Menambahkan..."
+
+msgid "Failed to add schedule rule: "
+msgstr "Gagal menambahkan aturan terjadwal: "
+
+msgid "Please set time slot"
+msgstr "Silakan atur slot waktu"
+
+msgid "Please select at least one day"
+msgstr "Silakan pilih setidaknya satu hari"
+
+msgid "No scheduled rules yet, click \"Add Rule\" to start setting"
+msgstr "Belum ada aturan terjadwal, klik \"Tambah aturan\" untuk mulai pengaturan"
+
+msgid "Loading..."
+msgstr "Memuat..."
+
+msgid "No schedule rules"
+msgstr "Tidak ada aturan terjadwal"
+
+msgid "Failed to load schedule rules"
+msgstr "Gagal memuat aturan terjadwal"
+
+msgid "Delete Schedule Rule"
+msgstr "Hapus aturan pembatasan terjadwal"
+
+msgid "Are you sure you want to delete this schedule rule?"
+msgstr "Apakah Anda yakin ingin menghapus aturan terjadwal ini?"
+
+msgid "Failed to delete schedule rule"
+msgstr "Gagal menghapus aturan terjadwal"
+
+msgid "Confirm"
+msgstr "Konfirmasi"
+
+msgid "Close"
+msgstr "Tutup"
+
+msgid "rule"
+msgstr "aturan"
+
+msgid "rules"
+msgstr "aturan"
+
+msgid "more"
+msgstr "lainnya"
+
+msgid "No active rule"
+msgstr "Tidak ada aturan aktif"
+
+msgid "Schedule Rules"
+msgstr "Aturan pembatasan terjadwal"
+
+msgid "Upload Statistics"
+msgstr "Statistik unggahan"
+
+msgid "Download Statistics"
+msgstr "Statistik unduhan"
+
+msgid "Cumulative Traffic"
+msgstr "Lalu lintas kumulatif"
+
+msgid "Daily"
+msgstr "Harian"
+
+msgid "Weekly"
+msgstr "Mingguan"
+
+msgid "Monthly"
+msgstr "Bulanan"
+
+msgid "Statistics"
+msgstr "Statistik"
+
+msgid "Average"
+msgstr "Rata-rata"
+
+msgid "Maximum"
+msgstr "Maksimum"
+
+msgid "Minimum"
+msgstr "Minimum"
+
+msgid "WAN Upload"
+msgstr "Unggahan WAN"
+
+msgid "WAN Download"
+msgstr "Unduhan WAN"
+
+msgid "WAN Uploaded"
+msgstr "Diunggah WAN"
+
+msgid "WAN Downloaded"
+msgstr "Diunduh WAN"
+
+msgid "Clear Traffic Data"
+msgstr "Hapus Data Lalu Lintas"
+
+msgid "Are you sure you want to clear all traffic data? This action cannot be undone."
+msgstr "Apakah Anda yakin ingin menghapus semua data lalu lintas? Tindakan ini tidak dapat dibatalkan."
+
+msgid "Failed to clear traffic data: "
+msgstr "Gagal menghapus data lalu lintas: "
+
+msgid "Restart Service"
+msgstr "Mulai Ulang Layanan"
+
+msgid "Restart Bandix Service"
+msgstr "Mulai Ulang Layanan Bandix"
+
+msgid "Are you sure you want to restart the Bandix service?"
+msgstr "Apakah Anda yakin ingin memulai ulang layanan Bandix?"
+
+msgid "Failed to restart service: "
+msgstr "Gagal memulai ulang layanan: "
+
+msgid "Realtime"
+msgstr "Waktu Nyata"
+
+msgid "Last 24 Hours"
+msgstr "24 Jam Terakhir"
+
+msgid "Last 7 Days"
+msgstr "7 Hari Terakhir"
+
+msgid "Last 30 Days"
+msgstr "30 Hari Terakhir"
+
+msgid "Last 10 Minutes"
+msgstr "10 Menit Terakhir"
+
+msgid "Last 15 Minutes"
+msgstr "15 Menit Terakhir"
+
+msgid "Last 30 Minutes"
+msgstr "30 Menit Terakhir"
+
+msgid "Last 1 Hour"
+msgstr "1 Jam Terakhir"
+
+msgid "Starting installation..."
+msgstr "Memulai instalasi..."
+
+msgid "Page will refresh in 3 seconds."
+msgstr "Halaman akan dimuat ulang dalam 3 detik."
+
+msgid "Installation failed"
+msgstr "Instalasi gagal"
+
+msgid "Installation failed at step: "
+msgstr "Instalasi gagal pada langkah: "
+
+msgid "Details: "
+msgstr "Detail: "
+
+msgid "Installation failed: "
+msgstr "Instalasi gagal: "
+
+msgid "Unknown error"
+msgstr "Kesalahan tidak diketahui"
+
+msgid "Service restarted successfully."
+msgstr "Layanan berhasil dimulai ulang."
+
+msgid "Service restart may have failed. Please check manually."
+msgstr "Mulai ulang layanan mungkin gagal. Silakan periksa secara manual."
+
+msgid "Please restart the service."
+msgstr "Silakan mulai ulang layanan."
+
+msgid "LuCI App updated successfully!"
+msgstr "Aplikasi LuCI berhasil diperbarui!"
+
+msgid "Bandix updated successfully!"
+msgstr "Bandix berhasil diperbarui!"
+
+msgid "LuCI App has update: "
+msgstr "Aplikasi LuCI memiliki pembaruan: "
+
+msgid "Bandix has update: "
+msgstr "Bandix memiliki pembaruan: "
+
+msgid "LuCI App is up to date: "
+msgstr "Aplikasi LuCI sudah terbaru: "
+
+msgid "Bandix is up to date: "
+msgstr "Bandix sudah terbaru: "
+
+msgid "Updates Available"
+msgstr "Pembaruan Tersedia"
+
+msgid "No Updates Available"
+msgstr "Tidak Ada Pembaruan Tersedia"
+
+msgid "Detected Architecture"
+msgstr "Arsitektur yang Terdeteksi"
+
+msgid "Package Manager"
+msgstr "Manajer Paket"
+
+msgid "LuCI Assets"
+msgstr "Aset LuCI"
+
+msgid "Bandix Assets"
+msgstr "Aset Bandix"
+
+msgid "Failed to check for updates"
+msgstr "Gagal memeriksa pembaruan"
+
+msgid "Failed to check for updates: "
+msgstr "Gagal memeriksa pembaruan: "
+
+msgid "Checking..."
+msgstr "Memeriksa..."
+
+msgid "Installing..."
+msgstr "Menginstal..."
+
+msgid "Download and Install"
+msgstr "Unduh dan Instal"
+
+msgid "Manual Download"
+msgstr "Unduh Manual"
+
+msgid "Close"
+msgstr "Tutup"
+
+msgid "Starting installation... The page will refresh automatically in 5 seconds."
+msgstr "Memulai instalasi... Halaman akan dimuat ulang secara otomatis dalam 5 detik."
+
+msgid "Please clear your browser cache manually after updating."
+msgstr "Harap hapus cache browser secara manual setelah memperbarui."
