--- a/luci-app-bandix/po/ja/bandix.po
+++ b/luci-app-bandix/po/ja/bandix.po
@@ -671,8 +671,8 @@ msgstr "オフラインタイムアウト"
 msgid "Set the timeout for device offline detection (seconds). Devices inactive for longer than this time will be marked as offline"
 msgstr "デバイスのオフライン検出のタイムアウトを設定（秒）。この時間より長く非アクティブなデバイスはオフラインとしてマークされます"
 
-msgid "Traffic History Period"
-msgstr "トラフィック履歴期間"
+msgid "Realtime Traffic Period"
+msgstr "リアルタイムトラフィック周期"
 
 msgid "10 minutes interval uses about 60 KB per device"
 msgstr "10分間隔でデバイスあたり約60KBを使用"
@@ -745,3 +745,279 @@ msgstr "レスポンス"
 
 msgid "Average Response Time"
 msgstr "平均応答時間"
+
+msgid "Show More"
+msgstr "もっと見る"
+
+msgid "Show Less"
+msgstr "閉じる"
+
+msgid "Add Schedule Rule"
+msgstr "スケジュール制限ルールを追加"
+
+msgid "Add Rule"
+msgstr "ルールを追加"
+
+msgid "Set rate limit rules for different time periods"
+msgstr "異なる時間帯にレート制限ルールを設定"
+
+msgid "Time Slot"
+msgstr "時間帯"
+
+msgid "Days of Week"
+msgstr "曜日"
+
+msgid "Mon"
+msgstr "月"
+
+msgid "Tue"
+msgstr "火"
+
+msgid "Wed"
+msgstr "水"
+
+msgid "Thu"
+msgstr "木"
+
+msgid "Fri"
+msgstr "金"
+
+msgid "Sat"
+msgstr "土"
+
+msgid "Sun"
+msgstr "日"
+
+msgid "Adding..."
+msgstr "追加中..."
+
+msgid "Failed to add schedule rule: "
+msgstr "スケジュール制限ルールの追加に失敗しました："
+
+msgid "Please set time slot"
+msgstr "時間帯を設定してください"
+
+msgid "Please select at least one day"
+msgstr "少なくとも1日を選択してください"
+
+msgid "No scheduled rules yet, click \"Add Rule\" to start setting"
+msgstr "スケジュール制限ルールがまだありません。「ルールを追加」をクリックして設定を開始してください"
+
+msgid "Loading..."
+msgstr "読み込み中..."
+
+msgid "No schedule rules"
+msgstr "スケジュール制限ルールなし"
+
+msgid "Failed to load schedule rules"
+msgstr "スケジュール制限ルールの読み込みに失敗しました"
+
+msgid "Delete Schedule Rule"
+msgstr "スケジュール制限ルールを削除"
+
+msgid "Are you sure you want to delete this schedule rule?"
+msgstr "このスケジュール制限ルールを削除してもよろしいですか？"
+
+msgid "Failed to delete schedule rule"
+msgstr "スケジュール制限ルールの削除に失敗しました"
+
+msgid "Confirm"
+msgstr "確認"
+
+msgid "Close"
+msgstr "閉じる"
+
+msgid "rule"
+msgstr "ルール"
+
+msgid "rules"
+msgstr "ルール"
+
+msgid "more"
+msgstr "その他"
+
+msgid "No active rule"
+msgstr "アクティブなルールなし"
+
+msgid "Schedule Rules"
+msgstr "スケジュール制限ルール"
+
+msgid "Upload Statistics"
+msgstr "アップロード統計"
+
+msgid "Download Statistics"
+msgstr "ダウンロード統計"
+
+msgid "Cumulative Traffic"
+msgstr "累積トラフィック"
+
+msgid "Daily"
+msgstr "日次"
+
+msgid "Weekly"
+msgstr "週次"
+
+msgid "Monthly"
+msgstr "月次"
+
+msgid "Statistics"
+msgstr "統計"
+
+msgid "Average"
+msgstr "平均"
+
+msgid "Maximum"
+msgstr "最大"
+
+msgid "Minimum"
+msgstr "最小"
+
+msgid "WAN Upload"
+msgstr "WAN アップロード"
+
+msgid "WAN Download"
+msgstr "WAN ダウンロード"
+
+msgid "WAN Uploaded"
+msgstr "WAN アップロード量"
+
+msgid "WAN Downloaded"
+msgstr "WAN ダウンロード量"
+
+msgid "Clear Traffic Data"
+msgstr "トラフィックデータを削除"
+
+msgid "Are you sure you want to clear all traffic data? This action cannot be undone."
+msgstr "すべてのトラフィックデータを削除してもよろしいですか？この操作は元に戻せません。"
+
+msgid "Failed to clear traffic data: "
+msgstr "トラフィックデータの削除に失敗しました："
+
+msgid "Restart Service"
+msgstr "サービス再起動"
+
+msgid "Restart Bandix Service"
+msgstr "Bandix サービスを再起動"
+
+msgid "Are you sure you want to restart the Bandix service?"
+msgstr "Bandix サービスを再起動してもよろしいですか？"
+
+msgid "Failed to restart service: "
+msgstr "サービスの再起動に失敗しました："
+
+msgid "Realtime"
+msgstr "リアルタイム"
+
+msgid "Last 24 Hours"
+msgstr "過去24時間"
+
+msgid "Last 7 Days"
+msgstr "過去7日間"
+
+msgid "Last 30 Days"
+msgstr "過去30日間"
+
+msgid "Last 10 Minutes"
+msgstr "過去10分"
+
+msgid "Last 15 Minutes"
+msgstr "過去15分"
+
+msgid "Last 30 Minutes"
+msgstr "過去30分"
+
+msgid "Last 1 Hour"
+msgstr "過去1時間"
+
+msgid "Starting installation..."
+msgstr "インストールを開始しています..."
+
+msgid "Page will refresh in 3 seconds."
+msgstr "3秒後にページが更新されます。"
+
+msgid "Installation failed"
+msgstr "インストール失敗"
+
+msgid "Installation failed at step: "
+msgstr "インストールがステップで失敗しました："
+
+msgid "Details: "
+msgstr "詳細："
+
+msgid "Installation failed: "
+msgstr "インストール失敗："
+
+msgid "Unknown error"
+msgstr "不明なエラー"
+
+msgid "Service restarted successfully."
+msgstr "サービスが正常に再起動されました。"
+
+msgid "Service restart may have failed. Please check manually."
+msgstr "サービスの再起動が失敗した可能性があります。手動で確認してください。"
+
+msgid "Please restart the service."
+msgstr "サービスを再起動してください。"
+
+msgid "LuCI App updated successfully!"
+msgstr "LuCIアプリが正常に更新されました！"
+
+msgid "Bandix updated successfully!"
+msgstr "Bandixが正常に更新されました！"
+
+msgid "LuCI App has update: "
+msgstr "LuCIアプリに更新があります："
+
+msgid "Bandix has update: "
+msgstr "Bandixに更新があります："
+
+msgid "LuCI App is up to date: "
+msgstr "LuCIアプリは最新です："
+
+msgid "Bandix is up to date: "
+msgstr "Bandixは最新です："
+
+msgid "Updates Available"
+msgstr "利用可能な更新"
+
+msgid "No Updates Available"
+msgstr "利用可能な更新なし"
+
+msgid "Detected Architecture"
+msgstr "検出されたアーキテクチャ"
+
+msgid "Package Manager"
+msgstr "パッケージマネージャー"
+
+msgid "LuCI Assets"
+msgstr "LuCIアセット"
+
+msgid "Bandix Assets"
+msgstr "Bandixアセット"
+
+msgid "Failed to check for updates"
+msgstr "更新の確認に失敗しました"
+
+msgid "Failed to check for updates: "
+msgstr "更新の確認に失敗しました："
+
+msgid "Checking..."
+msgstr "確認中..."
+
+msgid "Installing..."
+msgstr "インストール中..."
+
+msgid "Download and Install"
+msgstr "ダウンロードしてインストール"
+
+msgid "Manual Download"
+msgstr "手動ダウンロード"
+
+msgid "Close"
+msgstr "閉じる"
+
+msgid "Starting installation... The page will refresh automatically in 5 seconds."
+msgstr "インストールを開始しています... ページは5秒後に自動的に更新されます。"
+
+msgid "Please clear your browser cache manually after updating."
+msgstr "更新後、ブラウザのキャッシュを手動でクリアしてください。"
