--- a/luci-app-bandix/po/pl/bandix.po
+++ b/luci-app-bandix/po/pl/bandix.po
@@ -671,8 +671,8 @@ msgstr "Limit czasu offline"
 msgid "Set the timeout for device offline detection (seconds). Devices inactive for longer than this time will be marked as offline"
 msgstr "Ustaw limit czasu wykrywania urządzeń offline (sekundy). Urządzenia nieaktywne dłużej niż ten czas zostaną oznaczone jako offline"
 
-msgid "Traffic History Period"
-msgstr "Okres historii ruchu"
+msgid "Realtime Traffic Period"
+msgstr "Okres ruchu w czasie rzeczywistym"
 
 msgid "10 minutes interval uses about 60 KB per device"
 msgstr "Interwał 10 minut używa około 60 KB na urządzenie"
@@ -745,4 +745,280 @@ msgstr "Odpowiedzi"
 
 msgid "Average Response Time"
 msgstr "Średni Czas Odpowiedzi"
+
+msgid "Show More"
+msgstr "Pokaż więcej"
+
+msgid "Show Less"
+msgstr "Pokaż mniej"
+
+msgid "Add Schedule Rule"
+msgstr "Dodaj regułę limitu czasu"
+
+msgid "Add Rule"
+msgstr "Dodaj regułę"
+
+msgid "Set rate limit rules for different time periods"
+msgstr "Ustaw reguły limitu dla różnych okresów czasu"
+
+msgid "Time Slot"
+msgstr "Przedział czasowy"
+
+msgid "Days of Week"
+msgstr "Dni tygodnia"
+
+msgid "Mon"
+msgstr "Pon"
+
+msgid "Tue"
+msgstr "Wt"
+
+msgid "Wed"
+msgstr "Śr"
+
+msgid "Thu"
+msgstr "Czw"
+
+msgid "Fri"
+msgstr "Pt"
+
+msgid "Sat"
+msgstr "Sob"
+
+msgid "Sun"
+msgstr "Nie"
+
+msgid "Adding..."
+msgstr "Dodawanie..."
+
+msgid "Failed to add schedule rule: "
+msgstr "Nie udało się dodać reguły limitu czasu: "
+
+msgid "Please set time slot"
+msgstr "Proszę ustawić przedział czasowy"
+
+msgid "Please select at least one day"
+msgstr "Proszę wybrać co najmniej jeden dzień"
+
+msgid "No scheduled rules yet, click \"Add Rule\" to start setting"
+msgstr "Brak jeszcze reguł limitu czasu, kliknij \"Dodaj regułę\", aby rozpocząć"
+
+msgid "Loading..."
+msgstr "Ładowanie..."
+
+msgid "No schedule rules"
+msgstr "Brak reguł limitu czasu"
+
+msgid "Failed to load schedule rules"
+msgstr "Nie udało się załadować reguł limitu czasu"
+
+msgid "Delete Schedule Rule"
+msgstr "Usuń regułę limitu czasu"
+
+msgid "Are you sure you want to delete this schedule rule?"
+msgstr "Czy na pewno chcesz usunąć tę regułę limitu czasu?"
+
+msgid "Failed to delete schedule rule"
+msgstr "Nie udało się usunąć reguły limitu czasu"
+
+msgid "Confirm"
+msgstr "Potwierdź"
+
+msgid "Close"
+msgstr "Zamknij"
+
+msgid "rule"
+msgstr "reguła"
+
+msgid "rules"
+msgstr "reguły"
+
+msgid "more"
+msgstr "więcej"
+
+msgid "No active rule"
+msgstr "Brak aktywnej reguły"
+
+msgid "Schedule Rules"
+msgstr "Reguły limitu czasu"
+
+msgid "Upload Statistics"
+msgstr "Statystyki wysyłania"
+
+msgid "Download Statistics"
+msgstr "Statystyki pobierania"
+
+msgid "Cumulative Traffic"
+msgstr "Skumulowany ruch"
+
+msgid "Daily"
+msgstr "Dzienny"
+
+msgid "Weekly"
+msgstr "Tygodniowy"
+
+msgid "Monthly"
+msgstr "Miesięczny"
+
+msgid "Statistics"
+msgstr "Statystyki"
+
+msgid "Average"
+msgstr "Średnia"
+
+msgid "Maximum"
+msgstr "Maksimum"
+
+msgid "Minimum"
+msgstr "Minimum"
+
+msgid "WAN Upload"
+msgstr "Wysyłanie WAN"
+
+msgid "WAN Download"
+msgstr "Pobieranie WAN"
+
+msgid "WAN Uploaded"
+msgstr "Wysłano WAN"
+
+msgid "WAN Downloaded"
+msgstr "Pobrano WAN"
+
+msgid "Clear Traffic Data"
+msgstr "Wyczyść dane ruchu"
+
+msgid "Are you sure you want to clear all traffic data? This action cannot be undone."
+msgstr "Czy na pewno chcesz wyczyścić wszystkie dane ruchu? Tej operacji nie można cofnąć."
+
+msgid "Failed to clear traffic data: "
+msgstr "Nie udało się wyczyścić danych ruchu: "
+
+msgid "Restart Service"
+msgstr "Uruchom ponownie usługę"
+
+msgid "Restart Bandix Service"
+msgstr "Uruchom ponownie usługę Bandix"
+
+msgid "Are you sure you want to restart the Bandix service?"
+msgstr "Czy na pewno chcesz uruchomić ponownie usługę Bandix?"
+
+msgid "Failed to restart service: "
+msgstr "Nie udało się uruchomić ponownie usługi: "
+
+msgid "Realtime"
+msgstr "Czas rzeczywisty"
+
+msgid "Last 24 Hours"
+msgstr "Ostatnie 24 godziny"
+
+msgid "Last 7 Days"
+msgstr "Ostatnie 7 dni"
+
+msgid "Last 30 Days"
+msgstr "Ostatnie 30 dni"
+
+msgid "Last 10 Minutes"
+msgstr "Ostatnie 10 minut"
+
+msgid "Last 15 Minutes"
+msgstr "Ostatnie 15 minut"
+
+msgid "Last 30 Minutes"
+msgstr "Ostatnie 30 minut"
+
+msgid "Last 1 Hour"
+msgstr "Ostatnia 1 godzina"
+
+msgid "Starting installation..."
+msgstr "Rozpoczynanie instalacji..."
+
+msgid "Page will refresh in 3 seconds."
+msgstr "Strona odświeży się za 3 sekundy."
+
+msgid "Installation failed"
+msgstr "Instalacja nie powiodła się"
+
+msgid "Installation failed at step: "
+msgstr "Instalacja nie powiodła się w kroku: "
+
+msgid "Details: "
+msgstr "Szczegóły: "
+
+msgid "Installation failed: "
+msgstr "Instalacja nie powiodła się: "
+
+msgid "Unknown error"
+msgstr "Nieznany błąd"
+
+msgid "Service restarted successfully."
+msgstr "Usługa została pomyślnie uruchomiona ponownie."
+
+msgid "Service restart may have failed. Please check manually."
+msgstr "Ponowne uruchomienie usługi mogło się nie powieść. Sprawdź ręcznie."
+
+msgid "Please restart the service."
+msgstr "Proszę ponownie uruchomić usługę."
+
+msgid "LuCI App updated successfully!"
+msgstr "Aplikacja LuCI została pomyślnie zaktualizowana!"
+
+msgid "Bandix updated successfully!"
+msgstr "Bandix został pomyślnie zaktualizowany!"
+
+msgid "LuCI App has update: "
+msgstr "Aplikacja LuCI ma aktualizację: "
+
+msgid "Bandix has update: "
+msgstr "Bandix ma aktualizację: "
+
+msgid "LuCI App is up to date: "
+msgstr "Aplikacja LuCI jest aktualna: "
+
+msgid "Bandix is up to date: "
+msgstr "Bandix jest aktualny: "
+
+msgid "Updates Available"
+msgstr "Dostępne Aktualizacje"
+
+msgid "No Updates Available"
+msgstr "Brak Dostępnych Aktualizacji"
+
+msgid "Detected Architecture"
+msgstr "Wykryta Architektura"
+
+msgid "Package Manager"
+msgstr "Menedżer Pakietów"
+
+msgid "LuCI Assets"
+msgstr "Zasoby LuCI"
+
+msgid "Bandix Assets"
+msgstr "Zasoby Bandix"
+
+msgid "Failed to check for updates"
+msgstr "Nie udało się sprawdzić aktualizacji"
+
+msgid "Failed to check for updates: "
+msgstr "Nie udało się sprawdzić aktualizacji: "
+
+msgid "Checking..."
+msgstr "Sprawdzanie..."
+
+msgid "Installing..."
+msgstr "Instalowanie..."
+
+msgid "Download and Install"
+msgstr "Pobierz i Zainstaluj"
+
+msgid "Manual Download"
+msgstr "Pobieranie Ręczne"
+
+msgid "Close"
+msgstr "Zamknij"
+
+msgid "Starting installation... The page will refresh automatically in 5 seconds."
+msgstr "Rozpoczynanie instalacji... Strona odświeży się automatycznie za 5 sekund."
+
+msgid "Please clear your browser cache manually after updating."
+msgstr "Po aktualizacji należy ręcznie wyczyścić pamięć podręczną przeglądarki."
 
