--- a/luci-app-bandix/po/th/bandix.po
+++ b/luci-app-bandix/po/th/bandix.po
@@ -671,8 +671,8 @@ msgstr "หมดเวลาออฟไลน์"
 msgid "Set the timeout for device offline detection (seconds). Devices inactive for longer than this time will be marked as offline"
 msgstr "ตั้งค่าเวลาหมดเวลาสำหรับการตรวจจับอุปกรณ์ออฟไลน์ (วินาที) อุปกรณ์ที่ไม่ใช้งานนานกว่านี้จะถูกทำเครื่องหมายว่าออฟไลน์"
 
-msgid "Traffic History Period"
-msgstr "ระยะเวลาประวัติการจราจร"
+msgid "Realtime Traffic Period"
+msgstr "ระยะเวลาทราฟฟิกเรียลไทม์"
 
 msgid "10 minutes interval uses about 60 KB per device"
 msgstr "ช่วงเวลา 10 นาทีใช้ประมาณ 60 KB ต่ออุปกรณ์"
@@ -745,3 +745,279 @@ msgstr "คำตอบ"
 
 msgid "Average Response Time"
 msgstr "เวลาเฉลี่ยในการตอบสนอง"
+
+msgid "Show More"
+msgstr "แสดงเพิ่มเติม"
+
+msgid "Show Less"
+msgstr "แสดงน้อยลง"
+
+msgid "Add Schedule Rule"
+msgstr "เพิ่มกฎการจำกัดอัตราแบบกำหนดเวลา"
+
+msgid "Add Rule"
+msgstr "เพิ่มกฎ"
+
+msgid "Set rate limit rules for different time periods"
+msgstr "ตั้งค่ากฎการจำกัดอัตราสำหรับช่วงเวลาต่างๆ"
+
+msgid "Time Slot"
+msgstr "ช่วงเวลา"
+
+msgid "Days of Week"
+msgstr "วันในสัปดาห์"
+
+msgid "Mon"
+msgstr "จ"
+
+msgid "Tue"
+msgstr "อ"
+
+msgid "Wed"
+msgstr "พ"
+
+msgid "Thu"
+msgstr "พฤ"
+
+msgid "Fri"
+msgstr "ศ"
+
+msgid "Sat"
+msgstr "ส"
+
+msgid "Sun"
+msgstr "อา"
+
+msgid "Adding..."
+msgstr "กำลังเพิ่ม..."
+
+msgid "Failed to add schedule rule: "
+msgstr "เพิ่มกฎการจำกัดอัตราแบบกำหนดเวลาล้มเหลว: "
+
+msgid "Please set time slot"
+msgstr "โปรดตั้งค่าช่วงเวลา"
+
+msgid "Please select at least one day"
+msgstr "โปรดเลือกอย่างน้อยหนึ่งวัน"
+
+msgid "No scheduled rules yet, click \"Add Rule\" to start setting"
+msgstr "ยังไม่มีกฎการจำกัดอัตราแบบกำหนดเวลา คลิก \"เพิ่มกฎ\" เพื่อเริ่มตั้งค่า"
+
+msgid "Loading..."
+msgstr "กำลังโหลด..."
+
+msgid "No schedule rules"
+msgstr "ไม่มีกฎการจำกัดอัตราแบบกำหนดเวลา"
+
+msgid "Failed to load schedule rules"
+msgstr "โหลดกฎการจำกัดอัตราแบบกำหนดเวลาล้มเหลว"
+
+msgid "Delete Schedule Rule"
+msgstr "ลบกฎการจำกัดอัตราแบบกำหนดเวลา"
+
+msgid "Are you sure you want to delete this schedule rule?"
+msgstr "คุณแน่ใจหรือไม่ว่าต้องการลบกฎการจำกัดอัตราแบบกำหนดเวลานี้?"
+
+msgid "Failed to delete schedule rule"
+msgstr "ลบกฎการจำกัดอัตราแบบกำหนดเวลาล้มเหลว"
+
+msgid "Confirm"
+msgstr "ยืนยัน"
+
+msgid "Close"
+msgstr "ปิด"
+
+msgid "rule"
+msgstr "กฎ"
+
+msgid "rules"
+msgstr "กฎ"
+
+msgid "more"
+msgstr "เพิ่มเติม"
+
+msgid "No active rule"
+msgstr "ไม่มีกฎที่ใช้งาน"
+
+msgid "Schedule Rules"
+msgstr "กฎการจำกัดอัตราแบบกำหนดเวลา"
+
+msgid "Upload Statistics"
+msgstr "สถิติการอัปโหลด"
+
+msgid "Download Statistics"
+msgstr "สถิติการดาวน์โหลด"
+
+msgid "Cumulative Traffic"
+msgstr "ปริมาณการใช้งานสะสม"
+
+msgid "Daily"
+msgstr "รายวัน"
+
+msgid "Weekly"
+msgstr "รายสัปดาห์"
+
+msgid "Monthly"
+msgstr "รายเดือน"
+
+msgid "Statistics"
+msgstr "สถิติ"
+
+msgid "Average"
+msgstr "ค่าเฉลี่ย"
+
+msgid "Maximum"
+msgstr "สูงสุด"
+
+msgid "Minimum"
+msgstr "ต่ำสุด"
+
+msgid "WAN Upload"
+msgstr "อัปโหลด WAN"
+
+msgid "WAN Download"
+msgstr "ดาวน์โหลด WAN"
+
+msgid "WAN Uploaded"
+msgstr "อัปโหลด WAN แล้ว"
+
+msgid "WAN Downloaded"
+msgstr "ดาวน์โหลด WAN แล้ว"
+
+msgid "Clear Traffic Data"
+msgstr "ลบข้อมูลทราฟฟิก"
+
+msgid "Are you sure you want to clear all traffic data? This action cannot be undone."
+msgstr "คุณแน่ใจหรือไม่ว่าต้องการลบข้อมูลทราฟฟิกทั้งหมด? การกระทำนี้ไม่สามารถยกเลิกได้"
+
+msgid "Failed to clear traffic data: "
+msgstr "ล้มเหลวในการลบข้อมูลทราฟฟิก: "
+
+msgid "Restart Service"
+msgstr "รีสตาร์ทบริการ"
+
+msgid "Restart Bandix Service"
+msgstr "รีสตาร์ทบริการ Bandix"
+
+msgid "Are you sure you want to restart the Bandix service?"
+msgstr "คุณแน่ใจหรือไม่ว่าต้องการรีสตาร์ทบริการ Bandix?"
+
+msgid "Failed to restart service: "
+msgstr "ล้มเหลวในการรีสตาร์ทบริการ: "
+
+msgid "Realtime"
+msgstr "เรียลไทม์"
+
+msgid "Last 24 Hours"
+msgstr "24 ชั่วโมงล่าสุด"
+
+msgid "Last 7 Days"
+msgstr "7 วันที่ผ่านมา"
+
+msgid "Last 30 Days"
+msgstr "30 วันที่ผ่านมา"
+
+msgid "Last 10 Minutes"
+msgstr "10 นาทีที่ผ่านมา"
+
+msgid "Last 15 Minutes"
+msgstr "15 นาทีที่ผ่านมา"
+
+msgid "Last 30 Minutes"
+msgstr "30 นาทีที่ผ่านมา"
+
+msgid "Last 1 Hour"
+msgstr "1 ชั่วโมงที่ผ่านมา"
+
+msgid "Starting installation..."
+msgstr "กำลังเริ่มการติดตั้ง..."
+
+msgid "Page will refresh in 3 seconds."
+msgstr "หน้าจะรีเฟรชใน 3 วินาที"
+
+msgid "Installation failed"
+msgstr "การติดตั้งล้มเหลว"
+
+msgid "Installation failed at step: "
+msgstr "การติดตั้งล้มเหลวในขั้นตอน: "
+
+msgid "Details: "
+msgstr "รายละเอียด: "
+
+msgid "Installation failed: "
+msgstr "การติดตั้งล้มเหลว: "
+
+msgid "Unknown error"
+msgstr "ข้อผิดพลาดที่ไม่ทราบสาเหตุ"
+
+msgid "Service restarted successfully."
+msgstr "รีสตาร์ทบริการสำเร็จแล้ว"
+
+msgid "Service restart may have failed. Please check manually."
+msgstr "การรีสตาร์ทบริการอาจล้มเหลว กรุณาตรวจสอบด้วยตนเอง"
+
+msgid "Please restart the service."
+msgstr "กรุณารีสตาร์ทบริการ"
+
+msgid "LuCI App updated successfully!"
+msgstr "อัปเดตแอป LuCI สำเร็จแล้ว!"
+
+msgid "Bandix updated successfully!"
+msgstr "อัปเดต Bandix สำเร็จแล้ว!"
+
+msgid "LuCI App has update: "
+msgstr "แอป LuCI มีการอัปเดต: "
+
+msgid "Bandix has update: "
+msgstr "Bandix มีการอัปเดต: "
+
+msgid "LuCI App is up to date: "
+msgstr "แอป LuCI เป็นเวอร์ชันล่าสุด: "
+
+msgid "Bandix is up to date: "
+msgstr "Bandix เป็นเวอร์ชันล่าสุด: "
+
+msgid "Updates Available"
+msgstr "มีการอัปเดต"
+
+msgid "No Updates Available"
+msgstr "ไม่มีอัปเดต"
+
+msgid "Detected Architecture"
+msgstr "สถาปัตยกรรมที่ตรวจพบ"
+
+msgid "Package Manager"
+msgstr "ตัวจัดการแพ็คเกจ"
+
+msgid "LuCI Assets"
+msgstr "ทรัพยากร LuCI"
+
+msgid "Bandix Assets"
+msgstr "ทรัพยากร Bandix"
+
+msgid "Failed to check for updates"
+msgstr "ตรวจสอบอัปเดตล้มเหลว"
+
+msgid "Failed to check for updates: "
+msgstr "ตรวจสอบอัปเดตล้มเหลว: "
+
+msgid "Checking..."
+msgstr "กำลังตรวจสอบ..."
+
+msgid "Installing..."
+msgstr "กำลังติดตั้ง..."
+
+msgid "Download and Install"
+msgstr "ดาวน์โหลดและติดตั้ง"
+
+msgid "Manual Download"
+msgstr "ดาวน์โหลดด้วยตนเอง"
+
+msgid "Close"
+msgstr "ปิด"
+
+msgid "Starting installation... The page will refresh automatically in 5 seconds."
+msgstr "กำลังเริ่มการติดตั้ง... หน้าจะรีเฟรชอัตโนมัติใน 5 วินาที"
+
+msgid "Please clear your browser cache manually after updating."
+msgstr "กรุณาล้างแคชเบราว์เซอร์ด้วยตนเองหลังจากอัปเดต"
