--- a/luci-app-bandix/po/zh_Hant/bandix.po
+++ b/luci-app-bandix/po/zh_Hant/bandix.po
@@ -671,8 +671,8 @@ msgstr "離線超时時間"
 msgid "Set the timeout for device offline detection (seconds). Devices inactive for longer than this time will be marked as offline"
 msgstr "設定設備離線判斷的超时時間（秒）。超過此時間未活動的設備将被標記为離線"
 
-msgid "Traffic History Period"
-msgstr "歷史流量週期"
+msgid "Realtime Traffic Period"
+msgstr "即時流量週期"
 
 msgid "10 minutes interval uses about 60 KB per device"
 msgstr "10分鐘歷史週期，每个設備佔用 60KB"
@@ -745,3 +745,279 @@ msgstr "響應"
 
 msgid "Average Response Time"
 msgstr "平均響應時間"
+
+msgid "Show More"
+msgstr "顯示更多"
+
+msgid "Show Less"
+msgstr "顯示更少"
+
+msgid "Add Schedule Rule"
+msgstr "新增定時限速規則"
+
+msgid "Add Rule"
+msgstr "新增規則"
+
+msgid "Set rate limit rules for different time periods"
+msgstr "為不同時間段設定限速規則"
+
+msgid "Time Slot"
+msgstr "時間段"
+
+msgid "Days of Week"
+msgstr "星期"
+
+msgid "Mon"
+msgstr "週一"
+
+msgid "Tue"
+msgstr "週二"
+
+msgid "Wed"
+msgstr "週三"
+
+msgid "Thu"
+msgstr "週四"
+
+msgid "Fri"
+msgstr "週五"
+
+msgid "Sat"
+msgstr "週六"
+
+msgid "Sun"
+msgstr "週日"
+
+msgid "Adding..."
+msgstr "新增中..."
+
+msgid "Failed to add schedule rule: "
+msgstr "新增定時限速規則失敗："
+
+msgid "Please set time slot"
+msgstr "請設定時間段"
+
+msgid "Please select at least one day"
+msgstr "請至少選擇一天"
+
+msgid "No scheduled rules yet, click \"Add Rule\" to start setting"
+msgstr "還沒有定時限速規則，點擊"新增規則"開始設定"
+
+msgid "Loading..."
+msgstr "載入中..."
+
+msgid "No schedule rules"
+msgstr "沒有定時限速規則"
+
+msgid "Failed to load schedule rules"
+msgstr "載入定時限速規則失敗"
+
+msgid "Delete Schedule Rule"
+msgstr "刪除定時限速規則"
+
+msgid "Are you sure you want to delete this schedule rule?"
+msgstr "確定要刪除這個定時限速規則嗎？"
+
+msgid "Failed to delete schedule rule"
+msgstr "刪除定時限速規則失敗"
+
+msgid "Confirm"
+msgstr "確認"
+
+msgid "Close"
+msgstr "關閉"
+
+msgid "rule"
+msgstr "規則"
+
+msgid "rules"
+msgstr "規則"
+
+msgid "more"
+msgstr "更多"
+
+msgid "No active rule"
+msgstr "無生效規則"
+
+msgid "Schedule Rules"
+msgstr "定時限速規則"
+
+msgid "Upload Statistics"
+msgstr "上傳統計"
+
+msgid "Download Statistics"
+msgstr "下載統計"
+
+msgid "Cumulative Traffic"
+msgstr "累計流量"
+
+msgid "Daily"
+msgstr "每日"
+
+msgid "Weekly"
+msgstr "每週"
+
+msgid "Monthly"
+msgstr "每月"
+
+msgid "Statistics"
+msgstr "統計"
+
+msgid "Average"
+msgstr "平均值"
+
+msgid "Maximum"
+msgstr "最大值"
+
+msgid "Minimum"
+msgstr "最小值"
+
+msgid "WAN Upload"
+msgstr "WAN 上傳"
+
+msgid "WAN Download"
+msgstr "WAN 下載"
+
+msgid "WAN Uploaded"
+msgstr "WAN 上傳量"
+
+msgid "WAN Downloaded"
+msgstr "WAN 下載量"
+
+msgid "Clear Traffic Data"
+msgstr "刪除流量數據"
+
+msgid "Are you sure you want to clear all traffic data? This action cannot be undone."
+msgstr "確定要清除所有流量數據嗎？此操作無法撤銷。"
+
+msgid "Failed to clear traffic data: "
+msgstr "清除流量數據失敗："
+
+msgid "Restart Service"
+msgstr "重啟服務"
+
+msgid "Restart Bandix Service"
+msgstr "重啟 Bandix 服務"
+
+msgid "Are you sure you want to restart the Bandix service?"
+msgstr "確定要重啟 Bandix 服務嗎？"
+
+msgid "Failed to restart service: "
+msgstr "重啟服務失敗："
+
+msgid "Realtime"
+msgstr "即時"
+
+msgid "Last 24 Hours"
+msgstr "最近24小時"
+
+msgid "Last 7 Days"
+msgstr "最近7天"
+
+msgid "Last 30 Days"
+msgstr "最近30天"
+
+msgid "Last 10 Minutes"
+msgstr "最近10分鐘"
+
+msgid "Last 15 Minutes"
+msgstr "最近15分鐘"
+
+msgid "Last 30 Minutes"
+msgstr "最近30分鐘"
+
+msgid "Last 1 Hour"
+msgstr "最近1小時"
+
+msgid "Starting installation..."
+msgstr "開始安裝..."
+
+msgid "Page will refresh in 3 seconds."
+msgstr "頁面將在3秒後重新整理。"
+
+msgid "Installation failed"
+msgstr "安裝失敗"
+
+msgid "Installation failed at step: "
+msgstr "安裝在步驟失敗："
+
+msgid "Details: "
+msgstr "詳細資訊："
+
+msgid "Installation failed: "
+msgstr "安裝失敗："
+
+msgid "Unknown error"
+msgstr "未知錯誤"
+
+msgid "Service restarted successfully."
+msgstr "服務重啟成功。"
+
+msgid "Service restart may have failed. Please check manually."
+msgstr "服務重啟可能失敗，請手動檢查。"
+
+msgid "Please restart the service."
+msgstr "請重啟服務。"
+
+msgid "LuCI App updated successfully!"
+msgstr "LuCI 應用更新成功！"
+
+msgid "Bandix updated successfully!"
+msgstr "Bandix 更新成功！"
+
+msgid "LuCI App has update: "
+msgstr "LuCI 應用有更新："
+
+msgid "Bandix has update: "
+msgstr "Bandix 有更新："
+
+msgid "LuCI App is up to date: "
+msgstr "LuCI 應用已是最新版本："
+
+msgid "Bandix is up to date: "
+msgstr "Bandix 已是最新版本："
+
+msgid "Updates Available"
+msgstr "有可用更新"
+
+msgid "No Updates Available"
+msgstr "無可用更新"
+
+msgid "Detected Architecture"
+msgstr "檢測到的架構"
+
+msgid "Package Manager"
+msgstr "套件管理器"
+
+msgid "LuCI Assets"
+msgstr "LuCI 資源"
+
+msgid "Bandix Assets"
+msgstr "Bandix 資源"
+
+msgid "Failed to check for updates"
+msgstr "檢查更新失敗"
+
+msgid "Failed to check for updates: "
+msgstr "檢查更新失敗："
+
+msgid "Checking..."
+msgstr "檢查中..."
+
+msgid "Installing..."
+msgstr "安裝中..."
+
+msgid "Download and Install"
+msgstr "下載並安裝"
+
+msgid "Manual Download"
+msgstr "手動下載"
+
+msgid "Close"
+msgstr "關閉"
+
+msgid "Starting installation... The page will refresh automatically in 5 seconds."
+msgstr "開始安裝... 頁面將在5秒後自動重新整理。"
+
+msgid "Please clear your browser cache manually after updating."
+msgstr "更新後請手動清空瀏覽器快取。"
